# OptiBlogAi

./: .coverage  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  architecture.md  raw.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  discussions-setup.md
agent_system/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  requirements.txt  run.py  smoke_test.py
agent_system/src/: __init__.py
agent_system/src/agents/: __init__.py  graph.py
agent_system/src/agents/nodes/: __init__.py  clean_validate.py  evaluate_seo.py  generate_blog.py  react_agent.py  scrape_posts.py  search_top_posts.py
agent_system/src/agents/prompts/: __init__.py  blog_gen_prompt.txt  react_prompt.txt  search_prompt.txt  seo_eval_prompt.txt
agent_system/src/api/: __init__.py  app.py  auth.py  middleware.py
agent_system/src/api/routes/: __init__.py  blog.py
agent_system/src/config/: __init__.py  settings.py
agent_system/src/memory/: __init__.py  checkpointer.py
agent_system/src/schemas/: __init__.py  blog.py  models.py  state.py
agent_system/src/tools/: __init__.py  gemini_client.py  scraper.py  scraper_playwright.py  search_client.py
agent_system/src/utils/: logger.py
agent_system/tests/: __init__.py  conftest.py  test_api.py  test_graph.py  test_langgraph_fix.py
docs/: code-analysis-and-recommendations.md  discussion-topics-summary.md  ethical-guidelines.md  quick-start.md  usage-guide.md
optiblogai-site/: .prettierignore  (+5 more)
(+93 files in other folders)
